feat(uzytkownicy): dodano dezaktywację konta przez administratora
